style: fix overflow of circular text out of screen

--- a/src/Styles - SASS/HeroSection.scss
+++ b/src/Styles - SASS/HeroSection.scss
@@ -74,6 +74,7 @@
   align-items: center;
   justify-content: center;
   max-width: 600px;
+  overflow: hidden;
   @media (max-width: 1480px) {
     max-width: 500px;
   }
@@ -82,6 +83,9 @@
   }
   @media (max-width: 550px) {
     max-width: 300px;
+  }
+  @media (max-width: 450px) {
+    max-width: 280px;
   }
   .earth {
     width: 100%;
@@ -97,6 +101,7 @@
     animation: rotateOrbit 40s linear infinite;
     transform-origin: center;
     pointer-events: none;
+
     span {
       position: absolute;
       left: 50%;
@@ -113,6 +118,9 @@
       @media (max-width: 550px) {
         transform-origin: 0 150px;
         font-size: 1rem;
+      }
+      @media (max-width: 450px) {
+        transform-origin: 0 140px;
       }
     }
   }
